fix: do not need to wrap a scroll container with another scroll container

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -195,6 +195,10 @@
   padding: 0;
 }
 
+.scrollbar-spacing {
+  height: 100%;
+}
+
 @supports not (overflow-y: overlay) {
   .scrollbar-spacing {
     overflow-y: auto;
